--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="create_new_account">Create New Account</string>
 
     <color name="blue_light">#83BBE7</color>
-    <color name="blue_dark">#257DC1</color>
+    <color name="blue_dark">#3E7DC3</color>
     <color name="blue_medium">#519AD3</color>
     <color name="blue_text">#1A74BA</color>
 
