change from TextWatcher to OnFocusChangeListener

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -21,6 +21,7 @@
     <!-- Errors -->
     <string name="password_error">Password must be more than 3 characters</string>
     <string name="email_error">Email is invalid</string>
+    <string name="password_repeat_error">Password and Repeat Password does not match</string>
 
     <color name="input_border">#CACBCC</color>
     <color name="blue_light">#049cdb</color>
